Motion Paths: Incorrect update when a keyframe change to other frame and press Update Paths #62711

Closed
opened 2019-03-18 15:32:37 +01:00 by Jefferson Rausseo · 6 comments

System Information
Operating system: Manjaro Linux 64bits
Graphics card: AMD RX 480

Blender Version
Broken: 2.80 9099305771 (Official Build)

Short description of error
If I active "Motion Paths" in an object with some keyframes, the motion path is not update correctly when I change a keyframe of the frame and press "Update Paths", I can see a keyframe and the new frame but I can also see the same keyframe in the previous position.

Exact steps for others to reproduce the error

  1. Select the cube and insert three Keyframes with three difference position in 3 difference frame.
    For example:
  • Keyframe 1 in frame 10.
  • Keyframe 2 in frame 20
  • Keyframe 3 in frame 30
  1. In Properties->Object->Motion Paths, press "Calculate". The Motion Path is correct.

  2. In the Timeline, select the Keyframe 2 (frame 20) and change the position (for example to frame 25)

  3. In Properties->Object->Motion Paths, press "Update Paths". Wrong, now I see four Keyframes in the Motion Path (frames, 10, 20 ,25 and 30).

Screenshot_20190318_102650.png

**System Information** Operating system: Manjaro Linux 64bits Graphics card: AMD RX 480 **Blender Version** Broken: 2.80 9099305771ec (Official Build) **Short description of error** If I active "Motion Paths" in an object with some keyframes, the motion path is not update correctly when I change a keyframe of the frame and press "Update Paths", I can see a keyframe and the new frame but I can also see the same keyframe in the previous position. **Exact steps for others to reproduce the error** 1. Select the cube and insert three Keyframes with three difference position in 3 difference frame. For example: - Keyframe 1 in frame 10. - Keyframe 2 in frame 20 - Keyframe 3 in frame 30 2. In Properties->Object->Motion Paths, press "Calculate". The Motion Path is correct. 3. In the Timeline, select the Keyframe 2 (frame 20) and change the position (for example to frame 25) 4. In Properties->Object->Motion Paths, press "Update Paths". Wrong, now I see four Keyframes in the Motion Path (frames, 10, 20 ,25 and 30). ![Screenshot_20190318_102650.png](https://archive.blender.org/developer/F6844507/Screenshot_20190318_102650.png)

Added subscriber: @jefrau

Added subscriber: @jefrau
Sebastian Parborg self-assigned this 2019-03-18 16:27:39 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@ZedDB, are you still working on this?

@ZedDB, are you still working on this?
Sebastian Parborg removed their assignment 2019-03-19 17:36:18 +01:00
Jacques Lucke was assigned by Sebastian Parborg 2019-03-19 17:36:18 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This issue was referenced by 91914320ca

This issue was referenced by 91914320ca539dfbbd3e417a42387fd6ec6182df
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62711
No description provided.