Fix T62711: Incorrect motion path update

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4560